Disable USB chooser dialog while in VR

This change disabled display of the USB chooser dialog while in VR.

BUG=730850

Review-Url: https://codereview.chromium.org/2929843003
Cr-Commit-Position: refs/heads/master@{#478300}

Former-commit-id: 38457020a246e742a96765b4527e6b77a81c1e4f